--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
         <div class="card" style="width: 18rem;">
             <img class="card-img-top" src="..." alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Batman</h5>
+              <p class="card-text">A member of the Justice League and and iconic hero in DC Comics. His real identity is Bruce Wayne, a wealthy businessman. He dedicated his life to fighting crime after the murder of his parents. </p>
             </div>
           </div>      </div>
       <div class="col-sm">
