--- a/index.html
+++ b/index.html
@@ -32,36 +32,32 @@
         <div class="card" style="width: 18rem;">
             <img class="card-img-top" src="Wonderwoman.png" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Wonder Woman</h5>
+              <p class="card-text">Also known as Diana Prince. She is from the island of Themyscira. She has superpowers such as superhuman strength, agility, and the ability to fly. She left her homeland to fight for justice. </p>
             </div>
           </div>      </div>
       <div class="col-sm">
         <div class="card" style="width: 18rem;">
             <img class="card-img-top" src="flash.png" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">The Flash</h5>
+              <p class="card-text">Also known as Barry Allen. His main superpower is super speed. He can travel through time. </p>
             </div>
           </div>      </div>
       <div class="col-sm">
         <div class="card" style="width: 18rem;">
             <img class="card-img-top" src="cyborg.jpg" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Cyborg</h5>
+              <p class="card-text">Cyborg is also known as Victor Stone. He possess superhuman strength and has built in weapons and gadgets. His father who is a scientist replaced his damaged body with cybernetic technology to save his life.</p>
             </div>
           </div>      </div>
       <div class="col-sm">
         <div class="card" style="width: 18rem;">
             <img class="card-img-top" src="aquaman.png" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Aquaman</h5>
+              <p class="card-text">He is also known as Arthur Curry. He is the king of the underwater kingdom of Atlantis. He has superpowers such as breathing underwater and talking with marine animals. He has superhuman strength and can swim fast. He tries to protect the ocean world and the surface. </p>
             </div>
           </div>      </div>
     </div>
