--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <title></title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="styles.css">
 <script src="script.js"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"></head>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Justice League</h1>
 <div class="container">
+ 
     <div class="row">
       <div class="col-sm">
         <div class="card" style="width: 18rem;">
@@ -21,15 +21,17 @@
             </div>
           </div>      </div>
       <div class="col-sm">
-        <div class="card" style="width: 18rem;">
+        <h1>Justice League</h1>
+        <div class="card text-bg-primary mb-3" style="width: 18rem;">
             <img class="card-img-top" src="superman.png" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Superman</h5>
               <p class="card-text">Also known as Man of Steel and Clark Kent. Born on another planet called Krypton, he was sent to Earth as a baby. He has superpowers such as flight, super strength, and laser vision. </p>
+            
             </div>
           </div>      </div>
       <div class="col-sm">
-        <div class="card" style="width: 18rem;">
+        <div class="card text-bg-primary mb-3" style="width: 18rem;">
             <img class="card-img-top" src="Wonderwoman.png" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Wonder Woman</h5>
@@ -37,7 +39,7 @@
             </div>
           </div>      </div>
       <div class="col-sm">
-        <div class="card" style="width: 18rem;">
+        <div class="card text-bg-info mb-3" style="width: 18rem;">
             <img class="card-img-top" src="flash.png" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">The Flash</h5>
@@ -45,7 +47,7 @@
             </div>
           </div>      </div>
       <div class="col-sm">
-        <div class="card" style="width: 18rem;">
+        <div class="card text-bg-warning p-3" style="width: 18rem;">
             <img class="card-img-top" src="cyborg.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Cyborg</h5>
