--- a/index.html
+++ b/index.html
@@ -1,69 +1,16 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title></title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<script src="script.js"></script>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"></head>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>The Justice League</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-<div class="container">
- 
-    <div class="row">
-      <div class="col-sm">
-        <h1>Justice League</h1>
-        <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="batman.jpg" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Batman</h5>
-              <p class="card-text">A member of the Justice League and and iconic hero in DC Comics. His real identity is Bruce Wayne, a wealthy businessman. He dedicated his life to fighting crime after the murder of his parents. </p>
-            </div>
-          </div>      </div>
-      <div class="col-sm">
-
-        <div class="card text-bg-primary mb-3" style="width: 18rem;">
-            <img class="card-img-top" src="superman.png" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Superman</h5>
-              <p class="card-text">Also known as Man of Steel and Clark Kent. Born on another planet called Krypton, he was sent to Earth as a baby. He has superpowers such as flight, super strength, and laser vision. </p>
-            
-            </div>
-          </div>      </div>
-      <div class="col-sm">
-        <div class="card text-bg-primary mb-3" style="width: 18rem;">
-            <img class="card-img-top" src="Wonderwoman.png" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Wonder Woman</h5>
-              <p class="card-text">Also known as Diana Prince. She is from the island of Themyscira. She has superpowers such as superhuman strength, agility, and the ability to fly. She left her homeland to fight for justice. </p>
-            </div>
-          </div>      </div>
-      <div class="col-sm">
-        <div class="card text-bg-info mb-3" style="width: 18rem;">
-            <img class="card-img-top" src="flash.png" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">The Flash</h5>
-              <p class="card-text">Also known as Barry Allen. His main superpower is super speed. He can travel through time. </p>
-            </div>
-          </div>      </div>
-      <div class="col-sm">
-        <div class="card text-bg-warning p-3" style="width: 18rem;">
-            <img class="card-img-top" src="cyborg.jpg" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Cyborg</h5>
-              <p class="card-text">Cyborg is also known as Victor Stone. He possess superhuman strength and has built in weapons and gadgets. His father who is a scientist replaced his damaged body with cybernetic technology to save his life.</p>
-            </div>
-          </div>      </div>
-      <div class="col-sm">
-        <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="aquaman.png" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Aquaman</h5>
-              <p class="card-text">He is also known as Arthur Curry. He is the king of the underwater kingdom of Atlantis. He has superpowers such as breathing underwater and talking with marine animals. He has superhuman strength and can swim fast. He tries to protect the ocean world and the surface. </p>
-            </div>
-          </div>      </div>
+  <div class="container">
+    <div class="row" id="heroes-container">
     </div>
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
